--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -72,9 +72,9 @@
                 </RelativeLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/til_email"
                     app:errorEnabled="true">
 
                     <EditText
@@ -90,68 +90,74 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/til_password"
-                    app:errorEnabled="true">
-                <EditText
-                    android:id="@+id/et_password"
                     android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="@dimen/ef_margin_small"
-                    android:hint="Password"
-                    android:inputType="textPassword"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="14sp" />
+                    android:layout_height="wrap_content"
+                    app:errorEnabled="true">
+
+                    <EditText
+                        android:id="@+id/et_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="52dp"
+                        android:layout_marginTop="@dimen/ef_margin_small"
+                        android:hint="Password"
+                        android:inputType="textPassword"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="14sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_password_again"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/til_password-again"
                     app:errorEnabled="true">
-                <EditText
-                    android:id="@+id/et_password_again"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="@dimen/ef_margin_small"
-                    android:hint="Confirm Password"
-                    android:inputType="textPassword"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="14sp" />
+
+                    <EditText
+                        android:id="@+id/et_password_again"
+                        android:layout_width="match_parent"
+                        android:layout_height="52dp"
+                        android:layout_marginTop="@dimen/ef_margin_small"
+                        android:hint="Confirm Password"
+                        android:inputType="textPassword"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="14sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:id="@+id/til_given_name"
-                    app:errorEnabled="true">
-                <EditText
-                    android:id="@+id/et_given_name"
                     android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="@dimen/ef_margin_small"
-                    android:hint="First name"
-                    android:inputType="text"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="14sp" />
+                    android:layout_height="wrap_content"
+                    app:errorEnabled="true">
+
+                    <EditText
+                        android:id="@+id/et_given_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="52dp"
+                        android:layout_marginTop="@dimen/ef_margin_small"
+                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
+                        android:hint="First name"
+                        android:inputType="text"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="14sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
 
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/til_family_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/til_family_name"
                     app:errorEnabled="true">
-                <EditText
-                    android:id="@+id/et_family_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="@dimen/ef_margin_small"
-                    android:hint="Last name"
-                    android:inputType="text"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="14sp" />
+
+                    <EditText
+                        android:id="@+id/et_family_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="52dp"
+                        android:layout_marginTop="@dimen/ef_margin_small"
+                        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
+                        android:hint="Last name"
+                        android:inputType="text"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="14sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Spinner
