--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.settings.SettingsFragment">
+    tools:context=".ui.settings.SettingFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,7 +42,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/edit_profile"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:fontFamily="@font/roboto"
@@ -71,7 +71,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/change_password"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:fontFamily="@font/roboto"
