--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -180,7 +180,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView16"
+                    android:id="@+id/about"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:fontFamily="@font/roboto"
