--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -32,7 +32,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="Sign up with Treflor"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/textColor"
                     android:textSize="26dp"
                     android:textStyle="bold" />
 
@@ -79,7 +79,7 @@
                     android:layout_marginBottom="@dimen/ef_margin_small"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/textColor"
                     android:textSize="14sp" />
 
                 <EditText
@@ -89,7 +89,7 @@
                     android:layout_marginTop="@dimen/ef_margin_small"
                     android:hint="Password"
                     android:inputType="textPassword"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/textColor"
                     android:textSize="14sp"/>
 
                 <EditText
@@ -99,7 +99,7 @@
                     android:layout_marginTop="@dimen/ef_margin_small"
                     android:hint="Confirm Password"
                     android:inputType="textPassword"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/textColor"
                     android:textSize="14sp"/>
 
                 <EditText
@@ -109,7 +109,7 @@
                     android:layout_marginTop="@dimen/ef_margin_small"
                     android:hint="First name"
                     android:inputType="text"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/textColor"
                     android:textSize="14sp"/>
 
 
@@ -120,7 +120,7 @@
                     android:layout_marginTop="@dimen/ef_margin_small"
                     android:hint="Last name"
                     android:inputType="text"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/textColor"
                     android:textSize="14sp"/>
 
                 <Spinner
@@ -128,7 +128,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/ef_margin_small"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/textColor"
                     android:textSize="14sp"/>
 
                 <DatePicker
@@ -159,7 +159,7 @@
                     android:linksClickable="true"
                     android:text="Already have an account?"
                     android:textAlignment="center"
-                    android:textColor="@color/colorBlack"
+                    android:textColor="@color/textColor"
                     android:textSize="12sp" />
 
             </LinearLayout>
