--- a/app/src/main/res/navigation/main_bottom_navigation.xml
+++ b/app/src/main/res/navigation/main_bottom_navigation.xml
@@ -144,10 +144,18 @@
         <action
             android:id="@+id/action_settingsFragment_to_aboutAppFragment"
             app:destination="@id/aboutAppFragment" />
+        <action
+            android:id="@+id/action_settingsFragment_to_termsOfServiceFragment"
+            app:destination="@id/termsOfServiceFragment" />
     </fragment>
     <fragment
         android:id="@+id/aboutAppFragment"
         android:name="com.treflor.ui.settings.about.AboutAppFragment"
         android:label="fragment_about_app"
         tools:layout="@layout/fragment_about_app" />
+    <fragment
+        android:id="@+id/termsOfServiceFragment"
+        android:name="com.treflor.ui.settings.tos.TermsOfServiceFragment"
+        android:label="fragment_terms_of_service"
+        tools:layout="@layout/fragment_terms_of_service" />
 </navigation>
