--- a/app/src/main/res/layout/security_settings_fragment.xml
+++ b/app/src/main/res/layout/security_settings_fragment.xml
@@ -11,6 +11,7 @@
         android:id="@+id/toolbar5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:logo="@drawable/ic_arrow_back_black"
