images added to journey

--- a/app/src/main/res/layout/journey_fragment.xml
+++ b/app/src/main/res/layout/journey_fragment.xml
@@ -41,16 +41,32 @@
         app:tint="@color/cardview_light_background" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_my_location"
+        android:id="@+id/btn_upload_images"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
         android:backgroundTint="@color/colorPrimary"
-        android:src="@drawable/my_location"
+        android:src="@drawable/camera_white"
         android:visibility="gone"
         app:fabSize="mini"
         app:layout_constraintBottom_toTopOf="@id/btn_add_landmark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="#fff"
+        app:tint="@color/cardview_light_background" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_my_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:src="@drawable/my_location"
+        android:visibility="gone"
+        app:fabSize="mini"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:rippleColor="#fff"
         app:tint="@color/cardview_light_background" />
