--- a/app/src/main/res/layout/journey_details_fragment.xml
+++ b/app/src/main/res/layout/journey_details_fragment.xml
@@ -23,6 +23,7 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
+                android:id="@+id/img_cover"
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
                 android:contentDescription="hike image"
@@ -215,6 +216,20 @@
                 android:layout_marginTop="20dp"
                 android:text=""
                 android:textSize="13sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:text="Images"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_images"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
