--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -42,7 +42,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/edit_profile"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:fontFamily="@font/roboto"
@@ -71,7 +71,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/security"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:fontFamily="@font/roboto"
@@ -180,7 +180,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView16"
+                    android:id="@+id/about"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:fontFamily="@font/roboto"
@@ -191,7 +191,7 @@
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView17"
+                    android:id="@+id/terms_of_service"
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
                     android:fontFamily="@font/roboto"
