--- a/app/src/main/res/layout/security_settings_fragment.xml
+++ b/app/src/main/res/layout/security_settings_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.settings.security.securitySettings">
+    tools:context=".ui.settings.security.SecuritySettingsFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar5"
@@ -13,9 +13,7 @@
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        app:logo="@drawable/ic_arrow_back_black"
         app:title="Change Password"
-        app:titleMarginStart="40dp"
         app:titleTextColor="@color/colorPrimary" />
 
     <LinearLayout
@@ -30,11 +28,10 @@
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_marginTop="50dp"
-            android:background="@android:drawable/editbox_background_normal"
             android:hint="Current Password"
             android:inputType="textPassword"
             android:password="true"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/textColor"
             android:textSize="14sp" />
 
         <EditText
@@ -42,11 +39,10 @@
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_marginTop="10dp"
-            android:background="@android:drawable/editbox_background_normal"
             android:hint="New Password"
             android:inputType="textPassword"
             android:password="true"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/textColor"
             android:textSize="14sp" />
 
         <EditText
@@ -54,11 +50,10 @@
             android:layout_width="match_parent"
             android:layout_height="52dp"
             android:layout_marginTop="10dp"
-            android:background="@android:drawable/editbox_background_normal"
             android:hint="Confirm Password"
             android:inputType="textPassword"
             android:password="true"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/textColor"
             android:textSize="14sp" />
 
         <Button
