--- a/app/src/main/res/layout/general_settings_fragment.xml
+++ b/app/src/main/res/layout/general_settings_fragment.xml
@@ -69,7 +69,8 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/roboto"
-            android:hint="First Name"
+            android:hint="Given Name"
+            android:text="@{user.givenName.toString()}"
             android:inputType="text"
             android:textColor="@color/textColor"
             android:textSize="16sp" />
@@ -83,7 +84,8 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/roboto"
-            android:hint="Last Name"
+            android:hint="Family Name"
+            android:text="@{user.familyName.toString()}"
             android:inputType="text"
             android:textColor="@color/textColor"
             android:textSize="16sp" />
@@ -98,12 +100,13 @@
             android:layout_marginBottom="5dp"
             android:fontFamily="@font/roboto"
             android:hint="Email"
+            android:text="@{user.email.toString()}"
             android:inputType="text"
             android:textColor="@color/textColor"
             android:textSize="16sp" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/edit_profile_button"
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_gravity="right|end"
