--- a/app/src/main/res/layout/journey_details_fragment.xml
+++ b/app/src/main/res/layout/journey_details_fragment.xml
@@ -237,6 +237,7 @@
     </androidx.core.widget.NestedScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_show_map"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
